--- a/css/main.css
+++ b/css/main.css
@@ -144,13 +144,18 @@ main .textoCentral{
     transform: scale(1.1);
 }
 
+main.imagenesAlgunosClientes{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    margin-top: 10px;
+    padding: 10px;
+}
 
 .imagenesAlgunosClientes img{
-    float: left;
     width:  100%;
     object-fit: cover;
     border-radius: 30px;
-    padding-bottom: 20px;
 }
 
 .imagenesAlgunosClientes img:first-child{
@@ -355,9 +360,8 @@ footer h5{
     }
 
     .imagenesAlgunosClientes img{
-        width:  600px;
+        width:  100%;
         height: 350px;
-        margin: 10px;
     }
     
     .imagenesAlgunosClientes img:first-child{
@@ -367,6 +371,14 @@ footer h5{
      .imagenesAlgunosClientes{
          padding: 0;
      }
+
+     main.imagenesAlgunosClientes{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-top: 10px;
+        padding: 10px;
+    }
 
      .iconoLog{
         display: block;
