--- a/sass/secundarios/_main.scss
+++ b/sass/secundarios/_main.scss
@@ -119,8 +119,8 @@ main{
     }
 }
 .sectionContacto{
-    margin: 100px;
-    padding: 0 450px;
+    margin: 50px;
+    padding: 50px;
     & + .h4Contactanos{
         text-align: center;
         margin-top: 20px;
