--- a/sass/secundarios/_mq.scss
+++ b/sass/secundarios/_mq.scss
@@ -120,4 +120,9 @@
     .mainServicios div p{
         font-size: 1.3rem;
     }
+
+    .sectionContacto{
+        margin: 100px;
+        padding: 0 450px;
+    }
 }
