--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap");
 body {
-  background-color: #f9f9f9;
+  background-color: #F9F9F9;
   display: flex;
   flex-direction: column;
   height: 100vh;
