--- a/sass/secundarios/_body.scss
+++ b/sass/secundarios/_body.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: #f9f9f9;
+    background-color: #F9F9F9;
     display: flex;
     flex-direction: column;
     height: 100vh;
