se agregan mixin, extend(?) y tambien se agregan algunas variables. Mañana agregar mas variables y finalizar el proyecto.

--- a/sass/secundarios/_body.scss
+++ b/sass/secundarios/_body.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: #F9F9F9;
+    background-color: $color-fondo;
     display: flex;
     flex-direction: column;
     height: 100vh;
