--- a/css/main.css
+++ b/css/main.css
@@ -27,14 +27,12 @@ a {
 
 header h1 {
   margin: 20px;
-  text-align: center;
-  padding: 20px; }
+  padding: 20px;
+  text-align: center; }
 
 header.headerInicio {
   background-color: #A6E3E9;
-  display: flex;
   justify-content: space-evenly;
-  align-items: center;
   padding: 10px; }
 
 header nav ul {
@@ -61,16 +59,12 @@ header nav a {
   font-weight: bold !important; }
 
 footer {
-  display: flex;
   align-items: center;
   background-color: #A6E3E9;
   padding: 10px;
-  margin-top: auto;
-  justify-content: center; }
+  margin-top: auto; }
   footer .copyright {
-    display: flex;
     margin-left: 5px;
-    align-items: center;
     padding: 20px 0; }
   footer .imgDDA {
     width: 20px;
@@ -92,11 +86,8 @@ main .textoCentral {
   display: flex; }
   main .textoCentral p {
     list-style: none;
-    padding: 30px;
     margin-top: 50px;
-    list-style: none;
-    font-size: 1.5rem;
-    text-align: center; }
+    font-size: 1.5rem; }
   main .textoCentral .imagenPrincipal {
     width: 100%;
     border-radius: 40px;
@@ -110,30 +101,16 @@ main.mainServicios {
   margin: 20px; }
   main.mainServicios h2 {
     margin: 20px;
-    text-align: center;
-    font-size: 1.1rem;
-    font-weight: bold; }
-  main.mainServicios .sectionServicios {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center; }
-    main.mainServicios .sectionServicios p {
-      margin-top: 7px;
-      padding: 30px;
-      font-size: 1rem;
-      text-align: center; }
-    main.mainServicios .sectionServicios img {
-      width: 20%;
-      margin-top: 2rem;
-      animation-name: servicios;
-      animation-duration: 1s;
-      animation-iteration-count: infinite; }
-    main.mainServicios .sectionServicios .itemSectionContent {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center; }
+    font-size: 1.1rem; }
+  main.mainServicios .sectionServicios p {
+    margin-top: 7px;
+    font-size: 1rem; }
+  main.mainServicios .sectionServicios img {
+    width: 20%;
+    margin-top: 2rem;
+    animation-name: servicios;
+    animation-duration: 1s;
+    animation-iteration-count: infinite; }
 
 main.mainNosotros {
   margin: 20px; }
@@ -142,20 +119,14 @@ main.mainNosotros {
     padding-bottom: 10px;
     text-align: center; }
   main.mainNosotros .sectionNosotros {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 3rem;
     margin: 3rem; }
     main.mainNosotros .sectionNosotros img {
       width: 100px;
       height: 100px; }
     main.mainNosotros .sectionNosotros h5 {
-      text-align: center;
       height: 30px;
-      padding-top: 30px;
-      font-weight: bold; }
+      padding-top: 30px; }
     main.mainNosotros .sectionNosotros p {
       margin: 30px;
       padding: 30px 0;
@@ -169,7 +140,7 @@ main.mainNosotros {
 main.imagenesAlgunosClientes {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  gap: 20px;
+  gap: 10px;
   margin-top: 10px;
   padding: 0 20px; }
 
@@ -182,8 +153,6 @@ main:first-child {
   padding-top: 20px; }
 
 main.redess {
-  display: flex;
-  justify-content: center;
   padding: 10px; }
   main.redess img {
     width: 3rem;
@@ -208,13 +177,6 @@ main.redess {
     height: 500px; }
   .textoCentral {
     padding: 2rem; }
-  .imagenesAlgunosClientes img {
-    width: 100%;
-    height: 350px; }
-  .imagenesAlgunosClientes img:first-child {
-    padding-top: 0px; }
-  .imagenesAlgunosClientes {
-    padding: 0; }
   /* para agregar grid debes colocar primero el display, luego si lo quieres en columnas o rows (o inclusive uno sólo) y posterior darle valores. En este caso el 3 es para "3 columnas" y el 1FR es para que se repita la misma unidad para las imagenes que trabajaré. Luego agrego un gap entre las imagenes. OJO, debes remover los margin y padding pre existentes en las clases hijos y a su vez cualquier float que posea. */
   main.imagenesAlgunosClientes {
     display: grid;
@@ -227,18 +189,10 @@ main.redess {
   .sectionNosotros {
     display: flex;
     justify-content: center;
-    padding: 3rem;
-    margin: 3rem; }
-  .sectionNosotros {
-    display: flex;
-    flex-direction: row; }
+    margin: 3rem;
+    padding: 3rem; }
   .mainServicios h2 {
     font-size: 1.3em; }
-  .imagenPrincipal {
-    width: 700px;
-    height: 500px; }
-  .textoCentral {
-    padding: 2rem; }
   .imagenesAlgunosClientes img {
     width: 100%;
     height: 350px; }
@@ -246,33 +200,38 @@ main.redess {
     padding-top: 0px; }
   .imagenesAlgunosClientes {
     padding: 0; }
-  /* para agregar grid debes colocar primero el display, luego si lo quieres en columnas o rows (o inclusive uno sólo) y posterior darle valores. En este caso el 3 es para "3 columnas" y el 1FR es para que se repita la misma unidad para las imagenes que trabajaré. Luego agrego un gap entre las imagenes. OJO, debes remover los margin y padding pre existentes en las clases hijos y a su vez cualquier float que posea. */
-  main.imagenesAlgunosClientes {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin-top: 10px;
-    padding: 10px; }
-  .botonMenuMobile {
-    display: none; }
-  .sectionNosotros {
-    display: flex;
-    justify-content: center;
-    padding: 3rem;
-    margin: 3rem; }
-  .sectionNosotros {
-    display: flex;
-    flex-direction: row; }
-  .mainServicios h2 {
-    font-size: 1.3em; }
   main .sectionServicios img {
     width: 7%; }
-  .mainServicios div p {
-    font-size: 1.3rem; }
   main.mainServicios .sectionServicios img {
     width: 7%; }
-  .mainServicios div p {
-    font-size: 1.3rem; }
   .sectionContacto {
     margin: 100px;
     padding: 0 450px; } }
+
+main.mainServicios .sectionServicios {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center; }
+
+main.mainServicios .sectionServicios .itemSectionContent, main.mainNosotros .sectionNosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+main .textoCentral p, main.mainServicios .sectionServicios p {
+  text-align: center;
+  padding: 30px; }
+
+footer, main.redess {
+  display: flex;
+  justify-content: center; }
+
+header.headerInicio, footer .copyright {
+  display: flex;
+  align-items: center; }
+
+main.mainServicios h2, main.mainNosotros .sectionNosotros h5 {
+  text-align: center;
+  font-weight: bold; }
