--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "secundarios/variables";
+@import "secundarios/mixin";
 @import "secundarios/font-style";
 @import "secundarios/body";
 @import "secundarios/reset";
@@ -5,4 +7,4 @@
 @import "secundarios/footer";
 @import "secundarios/main";
 @import "secundarios/mq";
-@import "secundarios/variables"
+@import "secundarios/extend";
