--- a/sass/secundarios/_footer.scss
+++ b/sass/secundarios/_footer.scss
@@ -1,23 +1,19 @@
 footer{
-    display: flex;
+    @extend %flex-content;
     align-items: center;
-    background-color: #A6E3E9;
+    background-color: $color-header-footer;
     padding: 10px;
     margin-top: auto;
-    justify-content: center;
     .copyright{
-        display: flex;
+        @extend %flex-align-items;
         margin-left: 5px;
-        align-items: center;
         padding: 20px 0;
     }
     .imgDDA{
-        width: 20px;
-        height: 20px;
+        @include sizes(20px, 20px);
     }
     .imgWhats{
-        width: 4rem;
-        height: 4rem;
+        @include sizes(4rem, 4rem);
         position: fixed;
         right: 0;
         bottom: 0;
