--- a/sass/secundarios/_mq.scss
+++ b/sass/secundarios/_mq.scss
@@ -5,7 +5,7 @@
     }
 
     .textoCentral{
-        padding: 2rem;
+        padding: $espaciado-2rem;
     }
 
      /* para agregar grid debes colocar primero el display, luego si lo quieres en columnas o rows (o inclusive uno sólo) y posterior darle valores. En este caso el 3 es para "3 columnas" y el 1FR es para que se repita la misma unidad para las imagenes que trabajaré. Luego agrego un gap entre las imagenes. OJO, debes remover los margin y padding pre existentes en las clases hijos y a su vez cualquier float que posea. */
@@ -13,8 +13,8 @@
      main.imagenesAlgunosClientes{
         display: grid;
         @include grid-algunos(3, 20px);
-        margin-top: 10px;
-        padding: 10px;
+        margin-top: $espaciado-normal;
+        padding: $espaciado-normal;
     }
 
     .botonMenuMobile{
