--- a/sass/secundarios/_variables.scss
+++ b/sass/secundarios/_variables.scss
@@ -1,2 +1,9 @@
 $color-fondo: #F9F9F9;
 $color-header-footer: #A6E3E9;
+$espaciado-mediopx: 5px;
+$espaciado-normal: 10px;
+$espaciado-doble: 20px;
+$espaciado-triple: 30px;
+$espaciado-1rem: 1rem;
+$espaciado-2rem: 2rem;
+$espaciado-3rem: 3rem;
