--- a/css/main.css
+++ b/css/main.css
@@ -100,9 +100,10 @@ main.mainNosotros {
     main.mainNosotros .sectionNosotros img {
       width: 100px;
       height: 100px; }
-    main.mainNosotros .sectionNosotros h5 {
+    main.mainNosotros .sectionNosotros h3 {
       height: 30px;
-      padding-top: 30px; }
+      padding-top: 30px;
+      font-size: 1.2rem; }
     main.mainNosotros .sectionNosotros p {
       margin: 30px;
       padding: 30px 0;
@@ -225,6 +226,6 @@ header.headerInicio, footer .copyright {
   display: flex;
   align-items: center; }
 
-main.mainServicios h2, main.mainNosotros .sectionNosotros h5 {
+main.mainServicios h2, main.mainNosotros .sectionNosotros h3 {
   text-align: center;
   font-weight: bold; }
