--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,8 @@ body {
   margin-top: auto;
   font-family: 'Roboto', sans-serif !important; }
 
-header h1 {
-  margin: 20px;
-  padding: 20px;
-  text-align: center; }
+header .logoInicio {
+  width: 250px; }
 
 header.headerInicio {
   background-color: #A6E3E9;
@@ -90,7 +88,7 @@ main.mainServicios {
 
 main.mainNosotros {
   margin: 20px; }
-  main.mainNosotros h2 {
+  main.mainNosotros h1 {
     margin-top: 20px;
     padding-bottom: 10px;
     text-align: center; }
@@ -100,7 +98,7 @@ main.mainNosotros {
     main.mainNosotros .sectionNosotros img {
       width: 100px;
       height: 100px; }
-    main.mainNosotros .sectionNosotros h3 {
+    main.mainNosotros .sectionNosotros h2 {
       height: 30px;
       padding-top: 30px;
       font-size: 1.2rem; }
@@ -226,6 +224,6 @@ header.headerInicio, footer .copyright {
   display: flex;
   align-items: center; }
 
-main.mainServicios h2, main.mainNosotros .sectionNosotros h3 {
+main.mainServicios h2, main.mainNosotros .sectionNosotros h2 {
   text-align: center;
   font-weight: bold; }
