--- a/sass/secundarios/_header.scss
+++ b/sass/secundarios/_header.scss
@@ -1,7 +1,6 @@
 header{
-    h1{
-        @include margin-padding(20px, 20px);
-        text-align: center;
+    .logoInicio{
+        width: 250px;
     }
     &.headerInicio{
         @extend %flex-align-items;
