ultimos cambios. Se modifica el fontsize del h1-h3. h2 mantiene el mismo tamaño. se disminuye font para evitar problemas de visualizacion. ultimo commit antes de entregar el trabajo y cargarlo en 000host

--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,10 @@ footer {
     justify-content: center;
     margin: 3rem;
     padding: 3rem; }
+  h1 {
+    font-size: 2rem; }
+  h3 {
+    font-size: 1.2rem; }
   .mainServicios h2 {
     font-size: 1.3em; }
   .imagenesAlgunosClientes img {
