--- a/sass/secundarios/_mq.scss
+++ b/sass/secundarios/_mq.scss
@@ -27,6 +27,14 @@
         @include margin-padding(3rem, 3rem);
     }
 
+    h1{
+        font-size: 2rem;
+    }
+
+    h3{
+        font-size: 1.2rem;
+    }
+
     .mainServicios h2{
         font-size: 1.3em;
     }
