--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,8 @@ main.mainNosotros {
     padding-bottom: 10px;
     text-align: center; }
   main.mainNosotros .sectionNosotros {
-    padding: 3rem;
-    margin: 3rem; }
+    padding: 1rem;
+    margin: 1rem; }
     main.mainNosotros .sectionNosotros img {
       width: 100px;
       height: 100px; }
@@ -203,6 +203,19 @@ footer {
   .sectionContacto {
     margin: 100px;
     padding: 0 450px; } }
+
+@media screen and (max-width: 1024px) {
+  .row-fix {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    flex-wrap: wrap; }
+  .row-fix > * {
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-top: var(--bs-gutter-y); } }
 
 main.mainServicios .sectionServicios {
   display: flex;
